# MY_matching_service

./: .env.sample  .gitignore  01_create_and_fill_raw_tables.sql  Dockerfile  FIELD_MAPPING_TABLE.md  FINAL_CHECKLIST.md  LOGIC_VALIDATION_AND_TEST_QUERIES.md  README.md  README_CLICKHOUSE_SETUP.md  check_structure_postgresql.sql  clickhouse_mg_reporting_schema.sql  docker-compose.yml  management_reporting_marketguru_source.sql  pyproject.toml  requirements.txt  validation_report.md  КРАТКИЙ_ОТВЕТ.md  РЕЗЮМЕ.md
__MACOSX/: ._management_reporting_marketguru_source.sql
examples/: basic_usage.py
scripts/: load_jsonl_to_db.py  requirements.txt  test_search.py
src/matching_service/: config.py
src/matching_service/api/: __init__.py  error_handlers.py  schemas.py
src/matching_service/api/controllers/: __init__.py  health.py  search.py  upsert.py
src/matching_service/config/: __init__.py  api_config.py  constants.py  db_config.py  logging_config.py  ml_config.py
src/matching_service/dependencies/providers/: services.py
src/matching_service/entrypoints/: __init__.py  __main__.py  run_web_server.py
src/matching_service/services/: __init__.py  embedder.py  search.py  storage.py  usecases.py  vector_cache.py
src/matching_service/services/usecases/: __init__.py  health_usecase.py  search_usecase.py  upsert_usecase.py
src/matching_service/storage/repositories/: __init__.py  connection.py  repository.py  sqlite_repository.py  vector_reader.py  vector_serializer.py  vector_writer.py
src/matching_service/utils/: __init__.py  exceptions.py
src/search_service/api/: __init__.py  error_handlers.py  schemas.py
src/search_service/api/controllers/: __init__.py  health.py  search.py
src/search_service/config/: __init__.py  api_config.py  base.py  db_config.py  kafka_config.py  logging_config.py  ml_config.py
src/search_service/dependencies/providers/: services.py
src/search_service/entrypoints/: __init__.py  __main__.py  run_web_server.py
src/search_service/messaging/: __init__.py  vector_event_consumer.py
src/search_service/services/: __init__.py  embedder.py
src/search_service/services/usecases/: __init__.py  health_usecase.py  search_usecase.py
src/search_service/storage/: clickhouse_search.py
src/write_service/api/: __init__.py  error_handlers.py  schemas.py
src/write_service/api/controllers/: __init__.py  health.py  upsert.py
src/write_service/config/: __init__.py  api_config.py  base.py  db_config.py  kafka_config.py  logging_config.py  ml_config.py
src/write_service/dependencies/providers/: services.py
src/write_service/entrypoints/: __init__.py  __main__.py  run_web_server.py
src/write_service/messaging/: __init__.py  vector_event_producer.py
src/write_service/services/: __init__.py  embedder.py
src/write_service/services/usecases/: __init__.py  health_usecase.py  upsert_usecase.py
src/write_service/storage/: clickhouse_repository.py
tests/: conftest.py  test_api.py  test_usecases.py
