[project]
name = "matching-service"
version = "0.1.0"
description = "Vector-based product matching service using ML embeddings"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.1,<0.122.0",
    "uvicorn[standard]>=0.24.0,<0.39.0",
    "torch>=2.0.0,<2.10.0",
    "transformers>=4.35.0,<5.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "click>=8.0.0,<9.0.0",
]

[project.scripts]
matching-service = "matching_service.entrypoints.run_web_server:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["matching_service"]
package-dir = {"" = "src"}

[dependency-groups]
dev = []

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "N"]
ignore = ["E203", "E501"]  # разрешаем длинные строки
exclude = [
    ".venv",
    "build",
    "__pycache__",
    "dist",
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
